new image added

--- a/Contact.html
+++ b/Contact.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <h1>Contact Page</h1>
+        <img src="https://www.shutterstock.com/image-vector/phone-icon-vector-telephone-symbol-260nw-1723717453.jpg" height="300 px" alt="phone">
     </body>
 </html>
