--- a/Contact.html
+++ b/Contact.html
@@ -5,6 +5,10 @@
     </head>
     <body>
         <h1>Contact Page</h1>
-        <img src="https://www.shutterstock.com/image-vector/phone-icon-vector-telephone-symbol-260nw-1723717453.jpg" height="300 px" alt="phone">
+        <img src="https://www.shutterstock.com/image-vector/phone-icon-vector-telephone-symbol-260nw-1723717453.jpg" height="300 px" git alt="phone">
+        <embed src="Employee Evaluation Form.doc" 
+        type="review form"
+        height="300 px"
+        />
     </body>
 </html>
